Fix supporter image too big on mobile

--- a/app/assets/stylesheets/app/pages/supporters/_supporter.scss
+++ b/app/assets/stylesheets/app/pages/supporters/_supporter.scss
@@ -43,7 +43,6 @@ $namespace: ".pk-supporter";
 }
 
 #{$namespace}__image {
-  width: 300px;
   height: 170px;
   position: relative;
   overflow: hidden;
